Atualização do projeto para utilizar o Angular Material

--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,2 +1,9 @@
-<hr>
-<small>&copy;Nat</small>
+<mat-toolbar class="footer">
+<span>
+  Desenvolvido com
+  <i class="material-icons v-middle" appRed>
+      favorite
+  </i>
+  por <strong>Ítalo<span class="red">Araújo</span></strong>
+</span>
+</mat-toolbar>
