--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,1 +1,3 @@
-<span class="fs-4">Bookstore</span>
+<mat-toolbar class="header mat-elevation-z4">
+  <span class="fs-4">Bookstore</span>
+</mat-toolbar>
