Oraganização do código e estilização do Header e Footer.

--- a/src/app/components/shared/footer/footer.component.css
+++ b/src/app/components/shared/footer/footer.component.css
@@ -1,9 +1,9 @@
 .footer {
   position: fixed;
   bottom: 0;
-
   display: flex;
   justify-content: flex-end;
+  background-color: #D5D5D5;
 }
 
 .footer  > span {
