--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -1,5 +1,5 @@
-<div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
-    <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+<div class="header">
+    <a href="/" >
         <app-header></app-header>
     </a>
 
@@ -8,5 +8,8 @@
       <a class="me-3 py-2 text-dark text-decoration-none" href="#">Produtos</a>
       <a class="me-3 py-2 text-dark text-decoration-none" href="#">Suporte</a>
     </nav>
-    <a class="btn btn-outline-primary" href="#">Sign up</a>
+
+    <button mat-raised-button color="primary">Entrar</button>
 </div>
+
+
