--- a/src/app/components/book-cart/filters/filters.component.html
+++ b/src/app/components/book-cart/filters/filters.component.html
@@ -1,21 +1,23 @@
-<div class="card">
-    <div class="card-header">Filtros</div>
-    
-    <div class="card-body">
+<mat-card>
+
+  <mat-card-header>
+    <mat-card-title>Filtros</mat-card-title>
+  </mat-card-header>
+
+      <mat-card-content>
         <form>
             <div class="form-group">
                 <label for="de">De</label>
                 <input type="number" id="de" class="form-control">
             </div>
-        
+
             <div class="form-group">
                 <label for="ate">Até</label>
                 <input type="number" id="ate" class="form-control">
             </div>
-        
-            <button class="btn btn-primary btn-block btn-sm">Filtrar</button>  
-        
-        </form>
-    </div>
-</div>
 
+            <button class="btn btn-primary btn-block btn-sm">Filtrar</button>
+
+        </form>
+      </mat-card-content>
+</mat-card>
