--- a/src/app/components/book-cart/product-list/product-item/product-item.component.html
+++ b/src/app/components/book-cart/product-list/product-item/product-item.component.html
@@ -1,13 +1,12 @@
-    <div class="card shadow-sm">
-      <img class="bd-placeholder-img card-img-top" width="100%"   src='{{ "assets/images/" + livro.img + ".jpg" }}'>
+<mat-card class="example-card">
 
-      <div class="card-body">
+      <img mat-card-lg-image src='{{ "assets/images/" + livro.img + ".jpg" }}'>
+
+      <mat-card-content>
         <p class="card-text">{{ livro.name }}</p>
         <p class="card-text">{{ livro.category }}</p>
         <p class="card-text">{{ livro.quantity }}</p>
         <p class="card-text">{{livro.price | currency:'BRL'}}</p>
-
-
 
         <div class="d-flex justify-content-between align-items-center">
           <div class="btn-group">
@@ -15,5 +14,5 @@
             <button type="button" class="btn btn-sm btn-outline-secondary">Detalhes</button>
           </div>
         </div>
-      </div>
-    </div>
+      </mat-card-content>
+</mat-card>
